update the sensor node and mqtt topics

--- a/www/html/views/home.html
+++ b/www/html/views/home.html
@@ -76,7 +76,7 @@
                 graph_hum = part_two;
               }else if(part_one == "soil"){
                 graph_soil = part_two;
-              }else if(part_one == "light"){
+              }else if(part_one == "testTopic"){
                 graph_light = part_two;
               }
     });
